test/visibility/relative-use/relative-use-error2.good
relative-use-error2.chpl:8: In function 'foo':
relative-use-error2.chpl:9: error: cannot find module or 'enum' 'DoesNotExistModule' for 'use' statement
